Fix the vertical alignment of the gallery items on the projects page gallery.

--- a/projects.css
+++ b/projects.css
@@ -66,6 +66,7 @@ main {
 	top: 200px;
 	left: 50%;
 	transform: translateX(-50%);
+	border-radius: 6px;
 }
 
 .gallery-ctr {
@@ -85,46 +86,38 @@ main {
 }
 .gallery-item {
 	display: inline-block;
-	position: relative;
+	vertical-align: top;
 	width: 100%;
 	height: 100%;
 	text-align: center;
-	font-size: 1.4rem;
 	white-space: normal;
-}
-
-.gallery-item-ctr {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 80%;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	justify-content: center;
+	text-align: center;
 }
 
 .gallery-item img {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	max-width: 80%;
-	max-height: 80%;
+	margin-top: 10px;
+	max-width: 90%;
+	max-height: 65%;
+	box-shadow: 0 0 8px 10px rgba( 255, 255, 255, 0.8);
+	border-radius: 6px;
+
 }
 
-.gallery-item p {
+.gallery-caption {
 	display: inline-block;
-	position: absolute;
-	bottom: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	margin-top: 4px;
-	margin-bottom: 4px;
-	width: 75%;
+	margin-top: 10px;
+	width: 90%;
 	text-align: left;
 	border: black 2px solid;
 	padding: 4px;
+	padding-left: 6px;
+	padding-right: 6px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	max-height: 30%;
+	font-size: 1.2rem;
+	background-color: rgba( 225, 225, 225, 0.9);
+	box-shadow: 0 0 8px 10px rgba( 255, 255, 255, 0.8);
+	border-radius: 6px;
+	
 }
